created the base web scrapper functionality in a notebook

--- a/web_scraping_bot.ipynb
+++ b/web_scraping_bot.ipynb
@@ -2,8 +2,317 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 310,
    "id": "cfddb352-7468-4e5e-b28a-17e481f038ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import datetime\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "387d566d-89e7-4d92-b803-29301dcbe28e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### get page as string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "id": "42cb6e30-7f96-4e40-aa84-186cb0fdac87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://www.timeanddate.com/worldclock/sunearth.html'\n",
+    "page = requests.get(url).text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "942a7c19-7edc-47e1-b54a-20ea0375282d",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### narrow down to line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "id": "cbfd01c8-fd42-416b-a8fa-1b7c56c3b96c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_line(text, option):\n",
+    "    \n",
+    "    if option == 'solar':\n",
+    "        search = 'Position of the Sun: Subsolar Point'\n",
+    "    else:\n",
+    "        search = 'Position of the Moon: Sublunar Point'\n",
+    "        \n",
+    "    start_index = text.find(search) + len(search) + 5\n",
+    "    end_index = text.find('</p>', start_index)\n",
+    "    \n",
+    "    temp = text[start_index:end_index]\n",
+    "    \n",
+    "    remove_these = ['<p>', '<tr>', '</tr>', '<td class=r>', '</td>', '<td>', '&nbsp;']\n",
+    "    for elem in remove_these:\n",
+    "        temp = temp.replace(elem, '')\n",
+    "    \n",
+    "    return temp.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "633ba48f-12e6-4fd3-b59c-d8c1010fa50b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"on monday, january 9, 2023 at 00:50:00 utc the moon is at its zenith at latitude: 22°18'north, longitude: 14°05'east\""
+      ]
+     },
+     "execution_count": 317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_line(page, 'lunar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "id": "646ec837-553d-49f0-9819-eeebd664bcfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"on monday, january 9, 2023 at 00:50:00 utc the sun is at its zenith at latitude: 22°10'south, longitude: 169°12'east\""
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_line(page, 'solar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65b63dcf-02fb-42ea-8a9e-02f8d6f1e4dd",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### extract the datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "id": "7cf81266-f735-4fc9-a136-058c0158ac03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_datetime(text):\n",
+    "    start_index = text.find(',') + 2\n",
+    "    end_index = text.find('utc') - 1\n",
+    "    temp = text[start_index:end_index]\n",
+    "    fmt = '%B %d, %Y at %H:%M:%S'\n",
+    "    return tuple(str(datetime.datetime.strptime(temp, fmt)).split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "id": "468ef443-7949-431f-aad6-ee18c805fc68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2023-01-09', '00:50:00')"
+      ]
+     },
+     "execution_count": 319,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_datetime(get_line(page, 'lunar'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "id": "c5973e6d-a20e-4f35-97a0-b473f51bfbea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2023-01-09', '00:50:00')"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_datetime(get_line(page, 'solar'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11fb320e-5889-410e-9ef4-9b8e49ae3d40",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### extract the lat long in decimal degree format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "id": "2b33781e-ae33-4ebe-8872-8bb3d2807df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_coord(text):\n",
+    "    start_index_lat = text.find('e:') + 3\n",
+    "    end_index_lat = text.find(\"'\", start_index_lat)\n",
+    "    temp_lat = text[start_index_lat:end_index_lat]\n",
+    "    degree_lat, minute_lat = temp_lat.split('°')\n",
+    "    dd_lat = round(int(degree_lat) + (int(minute_lat) / 60), 4)\n",
+    "    \n",
+    "    start_index_long = text.find('e:', end_index_lat) + 3\n",
+    "    end_index_long = text.find(\"'\", start_index_long)\n",
+    "    temp_long = text[start_index_long:end_index_long]\n",
+    "    degree_long, minute_long = temp_long.split('°')\n",
+    "    dd_long = round(int(degree_long) + (int(minute_long) / 60), 4)\n",
+    "    \n",
+    "    return dd_lat, dd_long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "cfe75005-8527-4900-bebf-df8f3307a5b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22.3, 14.0833)"
+      ]
+     },
+     "execution_count": 321,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_coord(get_line(page, 'lunar'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "id": "409c8149-36cb-4803-b775-7514d17e79b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22.1667, 169.2)"
+      ]
+     },
+     "execution_count": 322,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_coord(get_line(page, 'solar'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7bc1c4f-3f90-4e23-9982-047a65ab37fc",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### construct JSON object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "id": "a74317cd-d00e-4c34-9640-d774d9208e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_json():\n",
+    "    temp = {\n",
+    "        \"moon\": {\n",
+    "            \"date\": get_datetime(get_line(page, 'lunar'))[0],\n",
+    "            \"time\": get_datetime(get_line(page, 'lunar'))[1],\n",
+    "            \"latitude\": get_coord(get_line(page, 'lunar'))[0],\n",
+    "            \"longitude\": get_coord(get_line(page, 'lunar'))[1],\n",
+    "        },\n",
+    "        \"sun\": {\n",
+    "            \"date\": get_datetime(get_line(page, 'solar'))[0],\n",
+    "            \"time\": get_datetime(get_line(page, 'solar'))[1],\n",
+    "            \"latitude\": get_coord(get_line(page, 'solar'))[0],\n",
+    "            \"longitude\": get_coord(get_line(page, 'solar'))[1],\n",
+    "        }\n",
+    "    }\n",
+    "    return json.dumps(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "id": "6ec92c81-c3c1-4a89-91b9-408ea3112aaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"moon\": {\"date\": \"2023-01-09\", \"time\": \"00:50:00\", \"latitude\": 22.3, \"longitude\": 14.0833}, \"sun\": {\"date\": \"2023-01-09\", \"time\": \"00:50:00\", \"latitude\": 22.1667, \"longitude\": 169.2}}'"
+      ]
+     },
+     "execution_count": 316,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ea7e427-966f-4bef-9663-fa9a53f5923f",
    "metadata": {},
    "outputs": [],
    "source": []
