included high level approach to the infinite timer structure

--- a/web_scraping_bot.ipynb
+++ b/web_scraping_bot.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 323,
    "id": "cfddb352-7468-4e5e-b28a-17e481f038ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import datetime\n",
-    "import json"
+    "import json\n",
+    "import time"
    ]
   },
   {
@@ -310,9 +311,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1194462c-dfc7-4a41-a95a-d895031274df",
+   "metadata": {},
+   "source": [
+    "#### infinte loop idea"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 327,
    "id": "5ea7e427-966f-4bef-9663-fa9a53f5923f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    while True:\n",
+    "        # scrape data\n",
+    "        # send data\n",
+    "        time.sleep(600) # every 600 seconds (10 minutes) means 144 daily entries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "id": "b6104416-72b2-4ffa-a5cb-835f5d058154",
    "metadata": {},
    "outputs": [],
    "source": []
